--- a/Handson_1.ipynb
+++ b/Handson_1.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 2 - How to write your first program"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 2.1 Student Registration\n",
     "Create a program that allows a student to complete a registration form and displays a completion message that includes the user’s full name and a temporary password.\n",
     "\n",
@@ -35,13 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter your first name: Eric\n",
+      "Enter your last name: Idle\n",
+      "Enter your birth year: 1934\n",
+      "\n",
       "Registration Form\n",
       "\n",
       "First Name: Eric\n",
@@ -49,25 +46,26 @@
       "Birth Year: 1934\n",
       "\n",
       "Welcome Eric Idle!\n",
-      "Your registration is complete\n",
+      "Your registration is complete!\n",
       "Your temporary password is: Eric*1934\n"
      ]
     }
    ],
    "source": [
-    "### CODE HERE ###\n",
+    "first_name = input(\"Enter your first name: \")\n",
+    "last_name = input(\"Enter your last name: \")\n",
+    "birth_year = int(input(\"Enter your birth year: \"))\n",
+    "\n",
+    "print()\n",
     "print(\"Registration Form\")\n",
     "print()\n",
-    "print(\"First Name: Eric\")\n",
-    "print(\"Last Name: Idle\")\n",
-    "print(\"Birth Year: 1934\")\n",
+    "print(\"First Name: \" + first_name)\n",
+    "print(\"Last Name: \" + last_name)\n",
+    "print(\"Birth Year: \" + str(birth_year))\n",
     "print()\n",
-    "print(\"Welcome Eric Idle!\")\n",
-    "print(\"Your registration is complete\")\n",
-    "print(\"Your temporary password is: Eric*1934\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"Welcome \"+first_name+\" \"+last_name + \"!\")\n",
+    "print(\"Your registration is complete!\")\n",
+    "print(\"Your temporary password is: \"+ first_name+\"*\"+str(birth_year))"
    ]
   },
   {
@@ -105,10 +103,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter how many hours the user worked: 35\n",
+      "Enter hourly Pay Rate: 14.5\n",
+      "\n",
+      "Pay Check Calculator\n",
+      "\n",
+      "Hours Worked: 35\n",
+      "Hourly Pay Rate: 14.5\n",
+      "\n",
+      "Gross Pay: 507.5\n",
+      "Tax Rate: 18%\n",
+      "Tax Amount: 91.35\n",
+      "Take home Pay: 416.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "Hours = float(input(\"Enter how many hours the user worked: \"))\n",
+    "Pay_Rate = float(input(\"Enter hourly Pay Rate: \"))\n",
+    "tax_rate = 18\n",
+    "\n",
+    "gross_pay = Hours*Pay_Rate\n",
+    "tax_amount = gross_pay * (tax_rate/100)\n",
+    "Take_Home_Pay = gross_pay - tax_amount\n",
+    "\n",
+    "print()\n",
+    "print(\"Pay Check Calculator\")\n",
+    "print()\n",
+    "print(\"Hours Worked:\", int(Hours))\n",
+    "print(\"Hourly Pay Rate:\",round(Pay_Rate,2))\n",
+    "print()\n",
+    "print(\"Gross Pay:\",gross_pay)\n",
+    "print(\"Tax Rate: \"+str(tax_rate)+\"%\")\n",
+    "print(\"Tax Amount:\", tax_amount)\n",
+    "print(\"Take home Pay:\",Take_Home_Pay)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,11 +176,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter miles: 200\n",
+      "Enter hours: 65\n",
+      "\n",
+      "Travel Time Calculator\n",
+      "\n",
+      "Enter Miles: 200\n",
+      "Enter Miles per Hour: 65\n",
+      "\n",
+      "Estimated Travel Time\n",
+      "Hours: 3\n",
+      "Minutes: 5\n"
+     ]
+    }
+   ],
    "source": [
-    "### CODE HERE ###"
+    "x = int(input(\"Enter miles: \" ))\n",
+    "y = int(input(\"Enter hours: \"))\n",
+    "\n",
+    "Hours = x//y\n",
+    "Minutes = x%y\n",
+    "print()\n",
+    "print(\"Travel Time Calculator\")\n",
+    "print()\n",
+    "print(\"Enter Miles:\",x)\n",
+    "print(\"Enter Miles per Hour:\",y)\n",
+    "print()\n",
+    "print(\"Estimated Travel Time\")\n",
+    "print(\"Hours:\",Hours)\n",
+    "print(\"Minutes:\",Minutes)\n"
    ]
   }
  ],
@@ -163,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
